Fix breadcrumb rendering on mobile
Fixes #866

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1943,7 +1943,6 @@ $colors: $blue, $psf, $yellow, $green, $purple, $red;
 .breadcrumbs {
     padding: .5em 0;
     border-bottom: 1px solid $default-border-color;
-    white-space: nowrap;
 
     li { @include pe-inline-block(); }
 
